Changed name of home html file

--- a/beam_wing_page.html
+++ b/beam_wing_page.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<header class="hero" style="background: url('fullcar.jpg') center/cover no-repeat;">
+<header class="hero" style="background: url('site-images/fullcar.jpg') center/cover no-repeat;">
   <div class="overlay"></div>
   <div class="hero-content">
     <h1>UBC Formula Projects</h1>
@@ -37,7 +37,7 @@
             <i>A lightweight aerodynamic component designed to enhance cornering performance and driver handling, designed for the 2024-2025 UBC Formula SAE vehicle.</i>
     </div>
     <div class="flex-container">
-        <img src="beamwing.jpg", alt="Image of beam wing on the final car", width="700px", height=auto, style="padding: 15px;">
+        <img src="site-images/beamwing.jpg", alt="Image of beam wing on the final car", width="700px", height=auto, style="padding: 15px;">
     </div>
     <p style="text-align: center; margin-bottom: 25px;">
         <i>Beam wing (yellow element) shown above on the final 2025 vehicle.</i>
@@ -84,7 +84,7 @@
     <h2 class="about-heading", style="padding: 10px;">Process</h2>
      <div class="flex-container">
         <div class="flex-item-left">
-            <img src="fullcarcad.png", alt="Full car CAD during the design cycle (SolidWorks)", style="height: 200px; width: 375px;">
+            <img src="site-images/fullcarcad.png", alt="Full car CAD during the design cycle (SolidWorks)", style="height: 200px; width: 375px;">
         </div>
         <div class="flex-item-right">
             <p style="margin-bottom: 10px;"><b>Sept. - Dec 2025: </b></p>
@@ -106,7 +106,7 @@
                 </ul>
         </div>
         <div class="flex-item-right">
-            <img src="manufacturing.jpg", alt="Performing carbon fiber layups", style="height: auto; width: 400px; margin-left: 15px;">
+            <img src="site-images/manufacturing.jpg", alt="Performing carbon fiber layups", style="height: auto; width: 400px; margin-left: 15px;">
         </div>
     </div> 
 
@@ -120,7 +120,7 @@
         </ul>
     </div>
     <div class = "flex-container">
-        <img src="aestheticbackphoto.jpg", alt="2025 car unveiling event", style="height: auto; width: 600px;">
+        <img src="site-images/formulabackphoto.jpg", alt="2025 car unveiling event", style="height: auto; width: 600px;">
     </div>
 </main> 
 <!--YOUR FOOTER WASN'T EXTENDING ALL THE WAY BECAUSE YOU DIDN'T CLOSE MAIN!!-->
