--- a/ml_atlas_page.html
+++ b/ml_atlas_page.html
@@ -41,7 +41,7 @@
             <b>Eric Vogt First Year Summer Research Experience Award.</b></a></i>
     </div>
     <div class="flex-container">
-        <img src="sw2025_2.png", alt="My poster presentation at Science Week", width="700px", height=auto, style="padding: 15px;">
+        <img src="site-images/sw2025_2.png", alt="My poster presentation at Science Week", width="700px", height=auto, style="padding: 15px;">
     </div>
     <p style="text-align: center; margin-bottom: 25px;">
         <i>Presenting my poster at Science Week.</i>
@@ -112,7 +112,7 @@
                 </p>
             </div>
             <div class="flex-container", style="padding: 20px; margin-bottom: 30px;">
-                <img src="mpegraph.png", alt="Mean Percent Error between Keras model output and hls4ml model output, varying total bit precision", width="700px">
+                <img src="site-images/mpegraph.png", alt="Mean Percent Error between Keras model output and hls4ml model output, varying total bit precision", width="700px">
             </div>
                  
 
@@ -120,7 +120,7 @@
              
         <div class="flex-container">
             <div class = "flex-item-left"> 
-                <img src="atlaspres.png" alt="Screenshot of a talk I gave for the ATLAS Summer Student presentation session" height=auto, width="375px", style="margin-top: 50px;">
+                <img src="site-images/atlaspres.png" alt="Screenshot of a talk I gave for the ATLAS Summer Student presentation session" height=auto, width="375px", style="margin-top: 50px;">
             </div>
             <div class = "flex-item-right", style="margin-left: 0px;"> 
                 <h3 class="about-heading" style="text-align: left; margin-left: 10px; font-size: 1.2rem; margin-bottom: 1rem; margin-top: 0.4rem;">
