--- a/ml_atlas_page.html
+++ b/ml_atlas_page.html
@@ -19,7 +19,7 @@
 </header>
 
 <div class="navbar">
-    <a href="portfolio_home.html">Home</a>
+    <a href="index.html">Home</a>
     <div class="dropdown">
           <!--<a href="#projects"></a>--> 
           <button class="dropbtn">Projects</button>
@@ -28,8 +28,8 @@
               <a href="ml_atlas_page.html">Machine Learning with ATLAS</a>
           </div>
     </div>
-    <a href="portfolio_home.html#skills">Skills</a>
-    <a href="portfolio_home.html#contact">Contact</a>
+    <a href="index.html#skills">Skills</a>
+    <a href="index.html#contact">Contact</a>
 </div>
 
 <main>
