--- a/ml_atlas_page.html
+++ b/ml_atlas_page.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<header class="hero" style="background: url('atlas detector.jpg') center/cover no-repeat;">
+<header class="hero" style="background: url('site-images/atlas_detector.jpg') center/cover no-repeat;">
   <div class="overlay" style="background-color: rgba(0, 0, 0, 0.6);"></div>
   <div class="hero-content">
     <h1>Machine Learning with ATLAS</h1>
