Added formatting changes for smaller screens

--- a/beam_wing_page.html
+++ b/beam_wing_page.html
@@ -34,10 +34,10 @@
 <main>
     <h2 class="about-heading">Beam Wing (2024-2025)</h2>
     <div class="about-box">
-            <i>A lightweight aerodynamic component designed to enhance cornering performance and driver handling, designed for the 2024-2025 UBC Formula SAE vehicle.</i>
+        <i>A lightweight aerodynamic component designed to enhance cornering performance and driver handling, designed for the 2024-2025 UBC Formula SAE vehicle.</i>
     </div>
     <div class="flex-container">
-        <img src="site-images/beamwing.jpg", alt="Image of beam wing on the final car", width="700px", height=auto, style="padding: 15px;">
+        <img src="site-images/beamwing.jpg" class="responsive_large" alt="Image of beam wing on the final car", style="padding: 15px;">
     </div>
     <p style="text-align: center; margin-bottom: 25px;">
         <i>Beam wing (yellow element) shown above on the final 2025 vehicle.</i>
@@ -106,7 +106,7 @@
                 </ul>
         </div>
         <div class="flex-item-right">
-            <img src="site-images/manufacturing.jpg", alt="Performing carbon fiber layups", style="height: auto; width: 400px; margin-left: 15px;">
+            <img src="site-images/manufacturing.jpg" class="responsive_small" alt="Performing carbon fiber layups", style="margin-left: 15px;">
         </div>
     </div> 
 
@@ -120,7 +120,7 @@
         </ul>
     </div>
     <div class = "flex-container">
-        <img src="site-images/formulabackphoto.jpg", alt="2025 car unveiling event", style="height: auto; width: 600px;">
+        <img src="site-images/formulabackphoto.jpg" class="responsive_large" alt="2025 car unveiling event">
     </div>
 </main> 
 <!--YOUR FOOTER WASN'T EXTENDING ALL THE WAY BECAUSE YOU DIDN'T CLOSE MAIN!!-->
