--- a/ml_atlas_page.html
+++ b/ml_atlas_page.html
@@ -41,7 +41,7 @@
             <b>Eric Vogt First Year Summer Research Experience Award.</b></a></i>
     </div>
     <div class="flex-container">
-        <img src="site-images/sw2025_2.png", alt="My poster presentation at Science Week", width="700px", height=auto, style="padding: 15px;">
+        <img src="site-images/sw2025_2.png", class="responsive_large" alt="My poster presentation at Science Week", style="padding: 15px;">
     </div>
     <p style="text-align: center; margin-bottom: 25px;">
         <i>Presenting my poster at Science Week.</i>
@@ -102,7 +102,7 @@
             </p>
         <h3 class="about-heading" style="text-align: middle; margin-left: 10px; font-size: 1.2rem; margin-bottom: 1rem; margin-top: 0.4rem;">
             Results</h3>
-            <div style="text-align: left; margin-left: 80px; margin-right: 80px;">
+            <div class="goals">
                 <p>
                     <i class="fa-solid fa-circle-check"></i> Hardware-friendly equivalents of larger models (higher number of nodes) deviate more significantly from their 
                         original Keras counterparts at lower precisions than smaller models. 
@@ -111,18 +111,12 @@
                     <i class="fa-solid fa-circle-check", style="text-align: left;"></i> Conversion accuracy increases with larger total bitwidth precision, but saturates after ~25 bits. 
                 </p>
             </div>
-            <div class="flex-container", style="padding: 20px; margin-bottom: 30px;">
-                <img src="site-images/mpegraph.png", alt="Mean Percent Error between Keras model output and hls4ml model output, varying total bit precision", width="700px">
+            <div class="flex-container" style="padding: 20px; margin-bottom: 30px;">
+                <img src="site-images/mpegraph.png" class="responsive_large" alt="Mean Percent Error between Keras model output and hls4ml model output, varying total bit precision", width="700px">
             </div>
                  
-
-
              
-        <div class="flex-container">
-            <div class = "flex-item-left"> 
-                <img src="site-images/atlaspres.png" alt="Screenshot of a talk I gave for the ATLAS Summer Student presentation session" height=auto, width="375px", style="margin-top: 50px;">
-            </div>
-            <div class = "flex-item-right", style="margin-left: 0px;"> 
+        <div class="flex-container", style="flex-direction: column;">
                 <h3 class="about-heading" style="text-align: left; margin-left: 10px; font-size: 1.2rem; margin-bottom: 1rem; margin-top: 0.4rem;">
                 Key deliverables</h3>
                 <p>
@@ -132,10 +126,12 @@
                     age groups. You can view the full final version of my poster <a href="Annabel Li - Student Poster.pdf" target="_blank">here.</a>
                 </p>
                 <p style="text-align: left; font-size: 14px; color: grey;">
-                    <i>Right: slide from a talk I gave for the ATLAS summer student presentation series</i>
+                    <i>Below: a slide from a talk I gave for the ATLAS summer student presentation series</i>
                 </p>
             </div>
-
+            <div class="flex-container">
+                <img src="site-images/atlaspres.png" class="responsive_large" alt="Screenshot of a talk I gave for the ATLAS Summer Student presentation session" style="margin-top: 50px;">
+            </div>          
         </div>      
     </div>
     <br>
