Added formatting changes for smaller screens

--- a/beam_wing_page.html
+++ b/beam_wing_page.html
@@ -34,7 +34,7 @@
 <main>
     <h2 class="about-heading">Beam Wing (2024-2025)</h2>
     <div class="about-box">
-        <i>A lightweight aerodynamic component designed to enhance cornering performance and driver handling, designed for the 2024-2025 UBC Formula SAE vehicle.</i>
+       <p> <i>A lightweight aerodynamic component designed to enhance cornering performance and driver handling, designed for the 2024-2025 UBC Formula SAE vehicle.</i></p>
     </div>
     <div class="flex-container">
         <img src="site-images/beamwing.jpg" class="responsive_large" alt="Image of beam wing on the final car", style="padding: 15px;">
@@ -106,7 +106,7 @@
                 </ul>
         </div>
         <div class="flex-item-right">
-            <img src="site-images/manufacturing.jpg" class="responsive_small" alt="Performing carbon fiber layups", style="margin-left: 15px;">
+            <img src="site-images/manufacturing.jpg" class="responsive_small" alt="Performing carbon fiber layups">
         </div>
     </div> 
 
