--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <header class="hero", style="background: url('site-images/formula_banner_photo.jpg') center/cover no-repeat;">
   <div class="overlay"></div>
   <div class="hero-content">
-    <h1 style="margin-left: 20px; margin-right: 20px;">Annabel Li</h1>
-    <p style="margin-left: 20px; margin-right: 20px;"> Machine Learning | Hardware | Mechanical Design</p>
+    <h1>Annabel Li</h1>
+    <p style="margin-left: 30px; margin-right: 30px;"> Machine Learning | Hardware | Mechanical Design</p>
   </div>
 </header>
 
