--- a/ml_atlas_page.html
+++ b/ml_atlas_page.html
@@ -34,11 +34,11 @@
 
 <main>
     <div class="about-box">
-            <i>Collaborated with researchers and grad students to develop and implement neural networks for the Large Hadron Collider's
+            <p><i>Collaborated with researchers and grad students to develop and implement neural networks for the Large Hadron Collider's
                 forthcoming upgrade, while independently studying network parameterizations for hardware optimization. I presented my 
             work at TRIUMF's Science week, <b>earning third place</b> among all student age groups (undergraduate and graduate). I was granted
         this opportunity as a recipient of the <a href="https://phas.ubc.ca/erich-vogt-first-year-summer-research-experience-fysre">
-            <b>Eric Vogt First Year Summer Research Experience Award.</b></a></i>
+            <b>Eric Vogt First Year Summer Research Experience Award.</b></a></i></p>
     </div>
     <div class="flex-container">
         <img src="site-images/sw2025_2.png", class="responsive_large" alt="My poster presentation at Science Week", style="padding: 15px;">
