Added formatting changes for smaller screens

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div>
           <h2 class="section-title">Skills</h2>
             <div class="flex-container">
-              <div class="flex-item-left">
+              <div>
                 <ul>
                   <p><strong>Programming</strong><br/></p>
                     <li style = "margin-left: 25px;">Python</li>
@@ -88,7 +88,7 @@
                     <li style = "margin-left: 25px;">NumPy</li>
                 </ul>
             </div>
-            <div class="flex-item-right", style = "margin-left: 15px;">
+            <div>
             <ul>
               <p><strong>Engineering Design</strong><br/></p>
                 <li style="margin-left: 25px;">SolidWorks</li>
