--- a/ml_atlas_page.html
+++ b/ml_atlas_page.html
@@ -120,7 +120,7 @@
                 <h3 class="about-heading" style="text-align: left; margin-left: 10px; font-size: 1.2rem; margin-bottom: 1rem; margin-top: 0.4rem;">
                 Key deliverables</h3>
                 <p>
-                    Presentation, collaboration, and initiative were large parts of my role, as I had weekly meetings with my supervisors (Colin Gay, Wojtek Fedorko, Max Swiatlowski)
+                    Presentation, collaboration, and initiative were large parts of my role, as I had weekly meetings with my supervisors (Colin Gay, Kelvin Leong, Wojtek Fedorko, Max Swiatlowski)
                     to present my findings and discuss next steps. 
                     At the end of July, I had the privilege to communicate my findings in a poster for TRIUMF's Science Week, earning third place among all student 
                     age groups. You can view the full final version of my poster <a href="Annabel Li - Student Poster.pdf" target="_blank">here.</a>
