Updated student poster pdf

--- a/ml_atlas_page.html
+++ b/ml_atlas_page.html
@@ -123,7 +123,7 @@
                     Presentation, collaboration, and initiative were large parts of my role, as I had weekly meetings with my supervisors (Colin Gay, Kelvin Leong, Wojtek Fedorko, Max Swiatlowski)
                     to present my findings and discuss next steps. 
                     At the end of July, I had the privilege to communicate my findings in a poster for TRIUMF's Science Week, earning third place among all student 
-                    age groups. You can view the full final version of my poster <a href="Annabel Li - Student Poster.pdf" target="_blank">here.</a>
+                    age groups. You can view the full final version of my poster <a href="Annabel_li_triumf_student_poster.pdf" target="_blank">here.</a>
                 </p>
                 <p style="text-align: left; font-size: 14px; color: grey;">
                     <i>Below: a slide from a talk I gave for the ATLAS summer student presentation series</i>
